feat(agentx): implement backend services for instance scenario task approval and audit